finished, have some bugs, gonna fix it later

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#033047</color>
+    <color name="statusBar_color">#04374c</color>
 </resources>
