--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/userFragment">
 
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.example.task20.presentation.screen.MainFragment"
+        android:id="@+id/userFragment"
+        android:name="com.example.task20.presentation.screen.user.UserFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_user" />
 </navigation>
